--- a/package.json
+++ b/package.json
@@ -1,24 +1,27 @@
 {
-    "name": "app-course",
+    "name": "fast-company",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@testing-library/jest-dom": "^5.16.5",
-        "@testing-library/react": "^13.4.0",
-        "@testing-library/user-event": "^13.5.0",
+        "@testing-library/jest-dom": "^5.11.4",
+        "@testing-library/react": "^11.1.0",
+        "@testing-library/user-event": "^12.1.10",
+        "axios": "^1.4.0",
         "bootstrap": "^5.1.0",
-        "bootstrap-icons": "^1.10.3",
+        "bootstrap-icons": "^1.5.0",
+        "eslint-plugin-prettier": "^3.4.1",
         "lodash": "^4.17.15",
-        "prop-types": "^15.8.1",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
+        "prop-types": "^15.7.2",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
         "react-router-dom": "^5.3.0",
-        "react-scripts": "5.0.1",
-        "react-select": "^5.7.2",
-        "web-vitals": "^2.1.4"
+        "react-scripts": "4.0.3",
+        "react-select": "^5.1.0",
+        "react-toastify": "^8.1.0",
+        "web-vitals": "^1.0.1"
     },
     "scripts": {
-        "start": "react-scripts start",
+        "start": "react-scripts --openssl-legacy-provider start",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
@@ -43,11 +46,14 @@
         ]
     },
     "devDependencies": {
-        "eslint": "^8.34.0",
-        "eslint-config-standard": "^17.0.0",
-        "eslint-plugin-import": "^2.27.5",
-        "eslint-plugin-n": "^15.6.1",
-        "eslint-plugin-promise": "^6.1.1",
-        "eslint-plugin-react": "^7.32.2"
+        "eslint": "^7.32.0",
+        "eslint-config-airbnb": "^18.2.1",
+        "eslint-config-standard": "^16.0.3",
+        "eslint-plugin-import": "^2.24.2",
+        "eslint-plugin-jsx-a11y": "^6.4.1",
+        "eslint-plugin-node": "^11.1.0",
+        "eslint-plugin-promise": "^5.1.0",
+        "eslint-plugin-react": "^7.25.1",
+        "eslint-plugin-react-hooks": "^4.2.0"
     }
 }
