--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
         "@testing-library/react": "^11.1.0",
         "@testing-library/user-event": "^12.1.10",
         "axios": "^1.4.0",
-        "bootstrap": "^5.1.0",
+        "bootstrap": "^5.0.1",
         "bootstrap-icons": "^1.5.0",
         "eslint-plugin-prettier": "^3.4.1",
         "lodash": "^4.17.15",
+        "nanoid": "^4.0.2",
         "prop-types": "^15.7.2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
